# Talent_Scout_interview

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  livekit.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep  2026_04_08_1247_aea756041e7c_initial_schema.py  2026_04_11_1200_candctx_add_candidate_context.py  2026_04_11_1430_msgmeta_add_interview_message_metadata.py
app/: main.py  models.py
app/core/: __init__.py  auth.py  chroma.py  config.py  constants.py  db.py  llm.py
app/pipeline/: edge_tts_adapter.py  evaluation.py  interview.py  jd.py  livekit_agent.py
app/routes/: api.py  candidate.py  recruiter.py  schemas.py  system.py
docs/: jsonb_schemas.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(candidate)/interview/[sessionId]/: page.tsx
frontend/app/(recruiter)/review/[jobId]/: page.tsx
frontend/components/: InterviewRoom.tsx  RecruiterDashboard.tsx  ScorecardOverrideForm.tsx  ScorecardView.tsx
frontend/components/hooks/: useTabFocus.ts
frontend/components/interview/: RealtimeSupport.tsx  RoomPanels.tsx
frontend/components/recruiter/: InjectQuestionModal.tsx  LiveFeed.tsx
frontend/components/scorecard/: DimensionCard.tsx
frontend/lib/: api.ts  types.ts
scripts/: seed_demo.py
tests/: test_evaluation.py  test_jd_pipeline.py  test_llm_core.py  test_models_sanity.py  test_pipeline.py
