[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "interview-engine"
version = "0.1.0"
description = "Talent Scout interview engine microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "langchain-openai>=0.2",
    "langgraph>=0.2.28",
    "langgraph-checkpoint-postgres>=0.1",
    "httpx>=0.27",
    "openai>=1.50",
    "chromadb>=0.5",
    "redis[asyncio]>=5.1",
    "livekit>=0.17",
    "livekit-agents[groq,silero]>=1.5",
    "pipecat-ai>=0.0.30",
    "structlog>=24.4",
    "langsmith>=0.1",
    "edge-tts>=7.0",
    "psycopg[binary]>=3.2",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "black>=24.8",
    "pre-commit>=3.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP017", "UP042"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "app/core/__init__.py",
    "app/core/chroma.py",
    "app/core/db.py",
    "app/core/llm.py",
    "app/main.py",
    "app/routes/*",
]
